force-app/main/default/objects/Convenio_Modificatorio__c/Convenio_Modificatorio__c.object-meta.xml
<CustomObject>
    <label>Convenio Modificatorio</label>
    <nameField>
        <label>No. Convenio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Convenios Modificatorios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>