force-app/main/default/objects/Convenio_Modificatorio__c/fields/Contracto__c.field-meta.xml
<CustomField>
    <fullName>Contracto__c</fullName>
    <label>Contracto</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Convenios Modificatorios</relationshipLabel>
    <relationshipName>Convenios_Modificatorios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>