force-app/main/default/objects/Convenio_Modificatorio__c/fields/Fecha_del_Convenio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_del_Convenio__c</fullName>
    <label>Fecha del Convenio</label>
    <type>Date</type>
</CustomField>