force-app/main/default/objects/Convenio_Modificatorio__c/fields/Motivo__c.field-meta.xml
<CustomField>
    <fullName>Motivo__c</fullName>
    <label>Motivo / Observaciones</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>