force-app/main/default/objects/Convenio_Modificatorio__c/fields/Nueva_Fecha_Fin_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Nueva_Fecha_Fin_Contrato__c</fullName>
    <label>Nueva fecha de fin de contrato</label>
    <type>Date</type>
</CustomField>