force-app/main/default/objects/Convenio_Modificatorio__c/fields/Tipo_de_Modificacion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Modificacion__c</fullName>
    <label>Tipo de Modificacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ampliacion de monto</fullName>
            </value>
            <value>
                <fullName>Ampliacion de plazo</fullName>
            </value>
            <value>
                <fullName>Cambio de alcance</fullName>
            </value>
            <value>
                <fullName>Reduccion de monto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>